# ExtBoard-001

./: ReadMe.md
Doc/: ExtBoard-001-Struct.dia
FW/: ReadMe.md
FW/Core/: .gitignore  ReadMe.md
FW/Core/001-base_rt/: .config  .gitignore  HCppBox  Kconfig  ReadMe.md  SConstruct  mksymlink.bat  project.uvguix.HYH  project.uvoptx  project.uvprojx  rtconfig.h  rtconfig.py  template.uvguix.HYH  template.uvprojx
FW/Core/001-base_rt/USB/: SConscript  interface_cdc_acm.cpp  interface_cdc_acm.h  system.c  system.h
FW/Core/001-base_rt/USB/CONFIG/: hw_config.c  hw_config.h  platform_config.h  usb_desc.c  usb_desc.h  usb_endp.c  usb_istr.c  usb_prop.c  usb_pwr.c
FW/Core/001-base_rt/applications/: aht20.c  led.c  led.c.orig  main.c  rs485.cpp  rs485.h  usb-cdc-acm.cpp  usb-cdc-acm.h  wdt.c
FW/Core/001-base_rt/board/: air32f10x_conf.h  board.c  board.h
FW/Core/001-base_rt/board/linker_scripts/: link.icf  link.lds  link.sct
FW/Core/001-base_rt/board/ports/: fal_cfg.h
FW/Core/001-base_rt/libraries/rt_drivers/: drv_adc.c  drv_flash.c  drv_gpio.c  drv_hwtimer.c  drv_soft_i2c.c  drv_spi.c  drv_usart.c  drv_wdt.c
FW/Core/001-base_rt/rc/: banner
FW/DAPLink/: ReadMe.md  daplink_v2_HYH_ExtBoard-001_bl.hex  daplink_v2_HYH_ExtBoard-001_iap.hex
HW/: ReadMe.md
HW/ExtBoard-001/: ExtBoard-001_2024-04-03.epro  ReadMe.md
SOFT/: ReadMe.md
SOFT/blk_detect/: ReadMe.md  blk_detect.sh
SOFT/serialport_detect/: CMakeLists.txt  ReadMe.md  serialport_detect.cpp
SOFT/usb_detect/: CMakeLists.txt  ReadMe.md  usb_detect.cpp
(+1 files in other folders)
